Github icon alignment fix

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -95,6 +95,7 @@
       }
 
       &.github {
+        margin-top: -3px;
         width: 18px;
         height: 18px;
         background: url("../images/github.svg") no-repeat center;
